feat: versão final com ajustes visuais
